# gridworld-world-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
scripts/: make_viz.py  rebuild_metrics.py
src/: data.py  losses.py  model.py  planner.py
tests/: test_data.py  test_losses.py  test_planner.py
